Always use DirectCompositionSurfaceWin when using DirectComposition

ChildWindowSurfaceWin was using DirectComposition internally inside
ANGLE. We can get rid of it and use DirectCompositionSurfaceWin
everywhere instead, because by default that just does the same thing
except explicitly inside Chrome.

Doing this saves code and allows us to switch backbuffers between
having alpha and not having alpha without flickering (because the
SwapChain can be recreated but the DirectComposition device can be kept
around).

A new context capability (use_overlays_for_video) is added to determine
whether it's more efficient to promote videos to use overlays. This was
originally determined using the dc_layers capability.

BUG=722107
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2933453002
Cr-Commit-Position: refs/heads/master@{#489467}

Former-commit-id: ac13d8266c1e18429a0584b780e7daa5bcf1542e