gpu/command_buffer/common/capabilities.h
@@ -159,6 +159,7 @@ struct GPU_EXPORT Capabilities {
   bool multisample_compatibility = false;
   // True if DirectComposition layers are enabled.
   bool dc_layers = false;
+  bool use_dc_overlays_for_video = false;
 
   // When this parameter is true, a CHROMIUM image created with RGB format will
   // actually have RGBA format. The client is responsible for handling most of
