ui/gl/gl_surface.h
@@ -213,6 +213,8 @@ class GL_EXPORT GLSurface : public base::RefCounted<GLSurface> {
 
   virtual bool SupportsDCLayers() const;
 
+  virtual bool UseOverlaysForVideo() const;
+
   // Set the rectangle that will be drawn into on the surface.
   virtual bool SetDrawRectangle(const gfx::Rect& rect);
 
@@ -298,6 +300,7 @@ class GL_EXPORT GLSurfaceAdapter : public GLSurface {
   bool FlipsVertically() const override;
   bool BuffersFlipped() const override;
   bool SupportsDCLayers() const override;
+  bool UseOverlaysForVideo() const override;
   bool SetDrawRectangle(const gfx::Rect& rect) override;
   gfx::Vector2d GetDrawOffset() const override;
   void WaitForSnapshotRendering() override;
